Add initial layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,66 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="container">
+        <div class="sidebar">
+            <div class="sidebar-logo">
+                <span>Placeholder</span>
+            </div>
+
+            <div class="sidebar-links-top">
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Communities</li>
+                </ul>
+            </div>
+
+            <div class="sidebar-links-bottom">
+                <ul>
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="header">
+            <div class="header-top">
+                <input type="text">
+                <span>Placeholder</span>
+            </div>
+
+            <div class="header-bottom">
+                <div class="header-bottom-left">
+
+                </div>
+
+                <div class="header-bottom-right">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="main-content">
+            <div class="main-content-cards">
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet. Sit vero libero At suscipit harum aut natus molestias qui cumque omnis sit voluptates illum et rerum assumenda.</p>
+                </div>
+
+                <div class="card">
+                    <h3>Another Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet. Sit vero libero At suscipit harum aut natus molestias qui cumque omnis sit voluptates illum et rerum assumenda.</p>
+                </div>
+            </div>
+
+            <div class="main-content-right">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
