--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
             </div>
 
             <div class="main-content-right">
-
+                <div class="main-content-right-announcement">
+                    <h2>Announcements</h2>
+                    <div class="announcements-container">
+                        
+                    </div>
+                </div>
             </div>
         </div>
     </div>
