Add content and styling to the rest of header

--- a/index.html
+++ b/index.html
@@ -51,11 +51,17 @@
 
             <div class="header-bottom">
                 <div class="header-bottom-left">
-
+                    <img src="./images/cat.jpg" alt="A cat">
+                    <div class="header-bottom-left-text">
+                        <p><b>Hi there,</b></p>
+                        <p class="enlarge-text"><b>Morgan Oakley (@morgan)</b></p>
+                    </div>
                 </div>
 
                 <div class="header-bottom-right">
-
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
                 </div>
             </div>
         </div>
